--- a/templates/main_page.html
+++ b/templates/main_page.html
@@ -126,7 +126,16 @@
         #multiple-stars h5 {
             margin: 30px 0 0 0;
         }
+
+        #degree {
+            display: none;
+            width: 50%;
+            justify-content: center;
+            margin: auto;
+        }
     </style>
+
+    <div id="degree" class="alert alert-success mt-5"></div>
 
     <div class="container-fluid">
         <div id="images">
@@ -170,9 +179,9 @@
         <div id="show-after-load">
             <div class="form-inline">
                 <label for="star1" class="mb-2 mr-sm-2">Connect :</label>
-                <input type="text" class="form-control mb-2 mr-sm-2" autocomplete="off" id="star1" name="star1" value="jerry">
+                <input type="text" class="form-control mb-2 mr-sm-2" autocomplete="off" id="star1" name="star1" value="vin diesel">
                 <label for="star2" class="mb-2 mr-sm-2">To: </label>
-                <input type="text" class="form-control mb-2 mr-sm-2" autocomplete="off" id="star2" name="star2" value="kevin hart">
+                <input type="text" class="form-control mb-2 mr-sm-2" autocomplete="off" id="star2" name="star2" value="donnie yen">
                 <div class="form-check-label">
                     <button type="submit" class="btn btn-success mb-2" id="button">Submit</button>
                 </div>
@@ -273,6 +282,7 @@
             const main_content = document.getElementById('main');
             const main_images = document.getElementById('images');
             const fast_div = document.querySelector('#fast');
+            let degrees = document.querySelector('#degree');
             let message = document.getElementById('message');
 
             // Displays the loading screen and hides other elements
@@ -281,6 +291,7 @@
             fast_div.style.display = 'none';
             clackers.style.display = 'block';
             message.style.display = 'none';
+            degrees.style.display = 'none';
 
             // Server request
             const request = new XMLHttpRequest();
@@ -325,7 +336,7 @@
                     return;
                 }
 
-                else {
+                else if (data.status == 'has_multiple_second') {
                     msg.innerHTML = 'Second star has multiples people with thesame name. Please select one.';
                     let second_star = data.second_star;
                     queryForStarId(second_star, 'second', second);
@@ -382,8 +393,10 @@
 
                 main_content.style.display = 'flex';
                 main_content.style.height = 'auto';
+                degrees.style.display = 'flex';
                 document.getElementById('dont-show').style.display = 'none';
                 document.getElementById('show-after-load').style.height = '15vh';
+                degrees.innerHTML = `${Object.keys(data).length} degrees of separation.`;
             }
 
             // Add data to send with request
