--- a/templates/layout.html
+++ b/templates/layout.html
@@ -13,21 +13,9 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
     <!-- Font awesome -->
     <script src="https://kit.fontawesome.com/cd2a81525f.js" crossorigin="anonymous"></script>
+    <!-- css -->
+    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='styles/style.css') }}">
 </head>
-<style>
-    * {
-        padding: 0;
-        margin: 0;
-        box-sizing: border-box;
-    }
-
-    body {
-        background: #1e90ff;
-        font-family: 'Poppins', sans-serif;
-        color: #fff;
-        overflow-x: hidden;
-    }
-</style>
 <body>
     {% block body %}
 
