Reformatted file structure

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -14,7 +14,7 @@
     <!-- Font awesome -->
     <script src="https://kit.fontawesome.com/cd2a81525f.js" crossorigin="anonymous"></script>
     <!-- css -->
-    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='styles/style.css') }}">
+    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='style.css') }}">
 </head>
 <body>
     {% block body %}
