--- a/templates/main_page.html
+++ b/templates/main_page.html
@@ -51,9 +51,9 @@
         <div id="show-after-load">
             <div class="form-inline">
                 <label for="star1" class="mb-2 mr-sm-2">Connect :</label>
-                <input type="text" class="form-control mb-2 mr-sm-2" autocomplete="off" id="star1" name="star1" value="donnie yen">
+                <input type="text" class="form-control mb-2 mr-sm-2" autocomplete="off" id="star1" name="star1" value="david beckham">
                 <label for="star2" class="mb-2 mr-sm-2">To: </label>
-                <input type="text" class="form-control mb-2 mr-sm-2" autocomplete="off" id="star2" name="star2" value="vin diesel">
+                <input type="text" class="form-control mb-2 mr-sm-2" autocomplete="off" id="star2" name="star2" value="donnie yen">
                 <div class="form-check-label">
                     <button type="submit" class="btn btn-success mb-2" id="button">Submit</button>
                 </div>
@@ -138,5 +138,5 @@
     </svg>
     <!-- Loading page end -->
 
-    <script src="{{ url_for('static', filename='js/myScript.js') }}"></script>
+    <script src="{{ url_for('static', filename='myScript.js') }}"></script>
 {% endblock %}
