--- a/templates/main_page.html
+++ b/templates/main_page.html
@@ -51,9 +51,9 @@
         <div id="show-after-load">
             <div class="form-inline">
                 <label for="star1" class="mb-2 mr-sm-2">Connect :</label>
-                <input type="text" class="form-control mb-2 mr-sm-2" autocomplete="off" id="star1" name="star1" value="david beckham">
+                <input type="text" class="form-control mb-2 mr-sm-2" autocomplete="off" id="star1" name="star1" value="Emma Watson">
                 <label for="star2" class="mb-2 mr-sm-2">To: </label>
-                <input type="text" class="form-control mb-2 mr-sm-2" autocomplete="off" id="star2" name="star2" value="donnie yen">
+                <input type="text" class="form-control mb-2 mr-sm-2" autocomplete="off" id="star2" name="star2" value="Jennifer Lawrence">
                 <div class="form-check-label">
                     <button type="submit" class="btn btn-success mb-2" id="button">Submit</button>
                 </div>
@@ -97,7 +97,7 @@
             <h5>Second star: <span id="second-star"></span></h5>
             <div id="second"></div>
 
-            <button type="submit" class="btn btn-success mb-2 by-star-id-btn" id="button">Submit</button>
+            <button type="submit" class="btn btn-success mb-2" id="by-star-id-btn">Submit</button>
         </div>
     </div>
 
