Reordered elements on the web page.

--- a/templates/main_page.html
+++ b/templates/main_page.html
@@ -59,17 +59,17 @@
                 </div>
                 <div class="form-check-inline m-4">
                     <label class="form-check-label">
-                        <input type="radio" class="form-check-input" name="option" checked="checked" value="Fast">Fast
+                        <input type="radio" class="form-check-input" name="option" checked="checked" value="Fast">Text Only
                     </label>
                     </div>
                     <div class="form-check-inline">
                     <label class="form-check-label">
-                        <input type="radio" class="form-check-input" name="option" value="slow">Slow W/ Images
+                        <input type="radio" class="form-check-input" name="option" value="wiki">Fast w/ Wiki Images
                     </label>
                     </div>
                     <div class="form-check-inline">
                     <label class="form-check-label">
-                        <input type="radio" class="form-check-input" name="option" value="wiki">Slow W/ wiki images
+                        <input type="radio" class="form-check-input" name="option" value="slow">Slow W/ HD Images
                     </label>
                 </div>
             </div>
